Edited Challenge 2 file, original code didn't work

--- a/Untitled.ipynb
+++ b/Untitled.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": 140,
    "metadata": {
     "scrolled": true
    },
@@ -13,14 +13,10 @@
      "text": [
       "1\n",
       "0.0\n",
-      "0.0\n",
-      "1.0\n",
-      "0.0\n",
       "1.0\n",
       "1.0\n",
-      "1.0\n",
-      "1.0\n",
-      "1.0\n"
+      "0\n",
+      "1\n"
      ]
     }
    ],
@@ -30,8 +26,22 @@
     "    print(baseTenNumber%2)\n",
     "    baseTenNumber = baseTenNumber - baseTenNumber%2\n",
     "    baseTenNumber = baseTenNumber/2\n",
+    "if baseTenNumber == 2:\n",
+    "    print(0)\n",
+    "    print(1)\n",
+    "if baseTenNumber == 0:\n",
+    "    print(0)\n",
+    "if baseTenNumber== 1:\n",
+    "    print(1)\n",
     "    \n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
